--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="overflow-hidden">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 border-bottom">
         <div class="container-fluid">
@@ -160,7 +161,7 @@
     </div>
     
 
-    </section>
+    </div>
 
     <script>
         
