--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                   Code
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="https://github.com/mannanmahajan77/WeatherWebsite/blob/main/index.html">HTML CODE</a></li>
-                  <li><a class="dropdown-item" href="https://github.com/mannanmahajan77/WeatherWebsite/blob/main/style.css">CSS CODE</a></li>
+                  <li><a class="dropdown-item" href="https://github.com/mannanmahajan77/WeatherWebsite/blob/main/index.html" target=”_blank”>HTML CODE</a></li>
+                  <li><a class="dropdown-item" href="https://github.com/mannanmahajan77/WeatherWebsite/blob/main/style.css" target=”_blank”>CSS CODE</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="https://github.com/mannanmahajan77/WeatherWebsite/" target=”_blank”>Open Git Hub</a></li>
                 </ul>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="https://in.linkedin.com/in/mannan-mahajan-875aa427b">About</a>
+                <a class="nav-link" href="https://in.linkedin.com/in/mannan-mahajan-875aa427b" target=”_blank”>About</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href=" tel: 9022839464">Contact Us</a>
+                <a class="nav-link" href=" tel: 9022839464" target=”_blank”>Contact Us</a>
               </li>
 
               
