--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <button ><img src="search.png"></button>
                     </div>
                     <div class="weather" id="weather">
-                        <img src="weather.png" class="weather_icon">
+                        <img src="clear.png" class="weather_icon">
                         <h1 class="temp">20°C</h1>
                         <h2 class="city_name">Pune</h2>
                         
